y.output
Terminals which are not used

   VOLATILE
   ENUM
   CASE
   DEFAULT
   SWITCH
   GOTO


State 38 conflicts: 19 shift/reduce


Grammar

    0 $accept: begin $end

    1 begin: external_declaration
    2      | begin external_declaration
    3      | Define begin

    4 primary_expression: IDENTIFIER
    5                   | CONSTANT
    6                   | STRING_LITERAL
    7                   | '(' expression ')'

    8 Define: DEFINE

    9 postfix_expression: primary_expression
   10                   | postfix_expression '[' expression ']'
   11                   | postfix_expression '(' ')'
   12                   | postfix_expression '(' argument_expression_list ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression PTR_OP IDENTIFIER
   15                   | postfix_expression INC_OP
   16                   | postfix_expression DEC_OP

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list ',' assignment_expression

   19 unary_expression: postfix_expression
   20                 | INC_OP unary_expression
   21                 | DEC_OP unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF '(' type_name ')'

   25 unary_operator: '&'
   26               | '*'
   27               | '+'
   28               | '-'
   29               | '~'
   30               | '!'

   31 cast_expression: unary_expression
   32                | '(' type_name ')' cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression '*' cast_expression
   35                          | multiplicative_expression '/' cast_expression
   36                          | multiplicative_expression '%' cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression '+' multiplicative_expression
   39                    | additive_expression '-' multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_OP additive_expression
   42                 | shift_expression RIGHT_OP additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression '<' shift_expression
   45                      | relational_expression '>' shift_expression
   46                      | relational_expression LE_OP shift_expression
   47                      | relational_expression GE_OP shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQ_OP relational_expression
   50                    | equality_expression NE_OP relational_expression

   51 and_expression: equality_expression
   52               | and_expression '&' equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression '^' and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression '|' exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND_OP inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression OR_OP logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression '?' expression ':' conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: '='
   66                    | MUL_ASSIGN
   67                    | DIV_ASSIGN
   68                    | MOD_ASSIGN
   69                    | ADD_ASSIGN
   70                    | SUB_ASSIGN
   71                    | LEFT_ASSIGN
   72                    | RIGHT_ASSIGN
   73                    | AND_ASSIGN
   74                    | XOR_ASSIGN
   75                    | OR_ASSIGN

   76 expression: assignment_expression
   77           | expression ',' assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers ';'
   80            | declaration_specifiers init_declarator_list ';'

   81 declaration_specifiers: storage_class_specifier
   82                       | storage_class_specifier declaration_specifiers
   83                       | type_specifier
   84                       | type_specifier declaration_specifiers

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator: declarator
   88                | declarator '=' initializer

   89 storage_class_specifier: TYPEDEF
   90                        | EXTERN
   91                        | STATIC
   92                        | AUTO
   93                        | REGISTER

   94 type_specifier: VOID
   95               | CHAR
   96               | SHORT
   97               | INT
   98               | LONG
   99               | FLOAT
  100               | DOUBLE
  101               | SIGNED
  102               | UNSIGNED
  103               | struct_or_union_specifier

  104 specifier_qualifier_list: type_specifier specifier_qualifier_list
  105                         | type_specifier
  106                         | CONST specifier_qualifier_list
  107                         | CONST

  108 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}' ';'
  109                          | struct_or_union '{' struct_declaration_list '}' ';'
  110                          | struct_or_union IDENTIFIER ';'

  111 struct_or_union: STRUCT
  112                | UNION

  113 struct_declaration_list: struct_declaration
  114                        | struct_declaration_list struct_declaration

  115 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  116 struct_declarator_list: declarator
  117                       | struct_declarator_list ',' declarator

  118 declarator: pointer direct_declarator
  119           | direct_declarator

  120 direct_declarator: IDENTIFIER
  121                  | '(' declarator ')'
  122                  | direct_declarator '[' constant_expression ']'
  123                  | direct_declarator '[' ']'
  124                  | direct_declarator '(' parameter_list ')'
  125                  | direct_declarator '(' identifier_list ')'
  126                  | direct_declarator '(' ')'

  127 pointer: '*'
  128        | '*' pointer

  129 parameter_list: parameter_declaration
  130               | parameter_list ',' parameter_declaration

  131 parameter_declaration: declaration_specifiers declarator
  132                      | declaration_specifiers

  133 identifier_list: IDENTIFIER
  134                | identifier_list ',' IDENTIFIER

  135 type_name: specifier_qualifier_list
  136          | specifier_qualifier_list declarator

  137 initializer: assignment_expression
  138            | '{' initializer_list '}'
  139            | '{' initializer_list ',' '}'

  140 initializer_list: initializer
  141                 | initializer_list ',' initializer

  142 statement: compound_statement
  143          | expression_statement
  144          | selection_statement
  145          | iteration_statement
  146          | jump_statement

  147 compound_statement: '{' '}'
  148                   | '{' statement_list '}'
  149                   | '{' declaration_list '}'
  150                   | '{' declaration_list statement_list '}'

  151 declaration_list: declaration
  152                 | declaration_list declaration

  153 statement_list: statement
  154               | statement_list statement

  155 expression_statement: ';'
  156                     | expression ';'

  157 selection_statement: IF '(' expression ')' statement
  158                    | IF '(' expression ')' statement ELSE statement

  159 iteration_statement: WHILE '(' expression ')' statement
  160                    | DO statement WHILE '(' expression ')' ';'
  161                    | FOR '(' expression_statement expression_statement ')' statement
  162                    | FOR '(' expression_statement expression_statement expression ')' statement

  163 jump_statement: CONTINUE ';'
  164               | BREAK ';'
  165               | RETURN ';'
  166               | RETURN expression ';'

  167 external_declaration: function_definition
  168                     | declaration

  169 function_definition: declaration_specifiers declarator declaration_list compound_statement
  170                    | declaration_specifiers declarator compound_statement
  171                    | declarator declaration_list compound_statement
  172                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 30
'%' (37) 36
'&' (38) 25 52
'(' (40) 7 11 12 24 32 121 124 125 126 157 158 159 160 161 162
')' (41) 7 11 12 24 32 121 124 125 126 157 158 159 160 161 162
'*' (42) 26 34 127 128
'+' (43) 27 38
',' (44) 18 77 86 117 130 134 139 141
'-' (45) 28 39
'.' (46) 13
'/' (47) 35
':' (58) 62
';' (59) 79 80 108 109 110 115 155 156 160 163 164 165 166
'<' (60) 44
'=' (61) 65 88
'>' (62) 45
'?' (63) 62
'[' (91) 10 122 123
']' (93) 10 122 123
'^' (94) 54
'{' (123) 108 109 138 139 147 148 149 150
'|' (124) 56
'}' (125) 108 109 138 139 147 148 149 150
'~' (126) 29
error (256)
NO_ELSE (258)
ELSE (259) 158
NE_OP (260) 50
EQ_OP (261) 49
LE_OP (262) 46
GE_OP (263) 47
IDENTIFIER (264) 4 13 14 108 110 120 133 134
CONSTANT (265) 5
STRING_LITERAL (266) 6
SIZEOF (267) 23 24
PTR_OP (268) 14
INC_OP (269) 15 20
DEC_OP (270) 16 21
LEFT_OP (271) 41
RIGHT_OP (272) 42
AND_OP (273) 58
OR_OP (274) 60
MUL_ASSIGN (275) 66
DIV_ASSIGN (276) 67
MOD_ASSIGN (277) 68
ADD_ASSIGN (278) 69
SUB_ASSIGN (279) 70
LEFT_ASSIGN (280) 71
RIGHT_ASSIGN (281) 72
AND_ASSIGN (282) 73
XOR_ASSIGN (283) 74
OR_ASSIGN (284) 75
DEFINE (285) 8
TYPEDEF (286) 89
EXTERN (287) 90
STATIC (288) 91
AUTO (289) 92
REGISTER (290) 93
CHAR (291) 95
SHORT (292) 96
INT (293) 97
LONG (294) 98
SIGNED (295) 101
UNSIGNED (296) 102
FLOAT (297) 99
DOUBLE (298) 100
CONST (299) 106 107
VOLATILE (300)
VOID (301) 94
STRUCT (302) 111
UNION (303) 112
ENUM (304)
CASE (305)
DEFAULT (306)
IF (307) 157 158
SWITCH (308)
WHILE (309) 159 160
DO (310) 160
FOR (311) 161 162
GOTO (312)
CONTINUE (313) 163
BREAK (314) 164
RETURN (315) 165 166


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
begin (86)
    on left: 1 2 3, on right: 0 2 3
primary_expression (87)
    on left: 4 5 6 7, on right: 9
Define (88)
    on left: 8, on right: 3
postfix_expression (89)
    on left: 9 10 11 12 13 14 15 16, on right: 10 11 12 13 14 15 16
    19
argument_expression_list (90)
    on left: 17 18, on right: 12 18
unary_expression (91)
    on left: 19 20 21 22 23 24, on right: 20 21 23 31 64
unary_operator (92)
    on left: 25 26 27 28 29 30, on right: 22
cast_expression (93)
    on left: 31 32, on right: 22 32 33 34 35 36
multiplicative_expression (94)
    on left: 33 34 35 36, on right: 34 35 36 37 38 39
additive_expression (95)
    on left: 37 38 39, on right: 38 39 40 41 42
shift_expression (96)
    on left: 40 41 42, on right: 41 42 43 44 45 46 47
relational_expression (97)
    on left: 43 44 45 46 47, on right: 44 45 46 47 48 49 50
equality_expression (98)
    on left: 48 49 50, on right: 49 50 51 52
and_expression (99)
    on left: 51 52, on right: 52 53 54
exclusive_or_expression (100)
    on left: 53 54, on right: 54 55 56
inclusive_or_expression (101)
    on left: 55 56, on right: 56 57 58
logical_and_expression (102)
    on left: 57 58, on right: 58 59 60
logical_or_expression (103)
    on left: 59 60, on right: 60 61 62
conditional_expression (104)
    on left: 61 62, on right: 62 63 78
assignment_expression (105)
    on left: 63 64, on right: 17 18 64 76 77 137
assignment_operator (106)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 64
expression (107)
    on left: 76 77, on right: 7 10 62 77 156 157 158 159 160 162 166
constant_expression (108)
    on left: 78, on right: 122
declaration (109)
    on left: 79 80, on right: 151 152 168
declaration_specifiers (110)
    on left: 81 82 83 84, on right: 79 80 82 84 131 132 169 170
init_declarator_list (111)
    on left: 85 86, on right: 80 86
init_declarator (112)
    on left: 87 88, on right: 85 86
storage_class_specifier (113)
    on left: 89 90 91 92 93, on right: 81 82
type_specifier (114)
    on left: 94 95 96 97 98 99 100 101 102 103, on right: 83 84 104
    105
specifier_qualifier_list (115)
    on left: 104 105 106 107, on right: 104 106 115 135 136
struct_or_union_specifier (116)
    on left: 108 109 110, on right: 103
struct_or_union (117)
    on left: 111 112, on right: 108 109 110
struct_declaration_list (118)
    on left: 113 114, on right: 108 109 114
struct_declaration (119)
    on left: 115, on right: 113 114
struct_declarator_list (120)
    on left: 116 117, on right: 115 117
declarator (121)
    on left: 118 119, on right: 87 88 116 117 121 131 136 169 170 171
    172
direct_declarator (122)
    on left: 120 121 122 123 124 125 126, on right: 118 119 122 123
    124 125 126
pointer (123)
    on left: 127 128, on right: 118 128
parameter_list (124)
    on left: 129 130, on right: 124 130
parameter_declaration (125)
    on left: 131 132, on right: 129 130
identifier_list (126)
    on left: 133 134, on right: 125 134
type_name (127)
    on left: 135 136, on right: 24 32
initializer (128)
    on left: 137 138 139, on right: 88 140 141
initializer_list (129)
    on left: 140 141, on right: 138 139 141
statement (130)
    on left: 142 143 144 145 146, on right: 153 154 157 158 159 160
    161 162
compound_statement (131)
    on left: 147 148 149 150, on right: 142 169 170 171 172
declaration_list (132)
    on left: 151 152, on right: 149 150 152 169 171
statement_list (133)
    on left: 153 154, on right: 148 150 154
expression_statement (134)
    on left: 155 156, on right: 143 161 162
selection_statement (135)
    on left: 157 158, on right: 144
iteration_statement (136)
    on left: 159 160 161 162, on right: 145
jump_statement (137)
    on left: 163 164 165 166, on right: 146
external_declaration (138)
    on left: 167 168, on right: 1 2
function_definition (139)
    on left: 169 170 171 172, on right: 167


state 0

    0 $accept: . begin $end

    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    DEFINE      shift, and go to state 3
    TYPEDEF     shift, and go to state 4
    EXTERN      shift, and go to state 5
    STATIC      shift, and go to state 6
    AUTO        shift, and go to state 7
    REGISTER    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    SIGNED      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    VOID        shift, and go to state 17
    STRUCT      shift, and go to state 18
    UNION       shift, and go to state 19
    '('         shift, and go to state 20

    begin                      go to state 21
    Define                     go to state 22
    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    declarator                 go to state 29
    direct_declarator          go to state 30
    pointer                    go to state 31
    external_declaration       go to state 32
    function_definition        go to state 33


state 1

  127 pointer: '*' .
  128        | '*' . pointer

    '*'  shift, and go to state 1

    $default  reduce using rule 127 (pointer)

    pointer  go to state 34


state 2

  120 direct_declarator: IDENTIFIER .

    $default  reduce using rule 120 (direct_declarator)


state 3

    8 Define: DEFINE .

    $default  reduce using rule 8 (Define)


state 4

   89 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 89 (storage_class_specifier)


state 5

   90 storage_class_specifier: EXTERN .

    $default  reduce using rule 90 (storage_class_specifier)


state 6

   91 storage_class_specifier: STATIC .

    $default  reduce using rule 91 (storage_class_specifier)


state 7

   92 storage_class_specifier: AUTO .

    $default  reduce using rule 92 (storage_class_specifier)


state 8

   93 storage_class_specifier: REGISTER .

    $default  reduce using rule 93 (storage_class_specifier)


state 9

   95 type_specifier: CHAR .

    $default  reduce using rule 95 (type_specifier)


state 10

   96 type_specifier: SHORT .

    $default  reduce using rule 96 (type_specifier)


state 11

   97 type_specifier: INT .

    $default  reduce using rule 97 (type_specifier)


state 12

   98 type_specifier: LONG .

    $default  reduce using rule 98 (type_specifier)


state 13

  101 type_specifier: SIGNED .

    $default  reduce using rule 101 (type_specifier)


state 14

  102 type_specifier: UNSIGNED .

    $default  reduce using rule 102 (type_specifier)


state 15

   99 type_specifier: FLOAT .

    $default  reduce using rule 99 (type_specifier)


state 16

  100 type_specifier: DOUBLE .

    $default  reduce using rule 100 (type_specifier)


state 17

   94 type_specifier: VOID .

    $default  reduce using rule 94 (type_specifier)


state 18

  111 struct_or_union: STRUCT .

    $default  reduce using rule 111 (struct_or_union)


state 19

  112 struct_or_union: UNION .

    $default  reduce using rule 112 (struct_or_union)


state 20

  121 direct_declarator: '(' . declarator ')'

    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 20

    declarator         go to state 35
    direct_declarator  go to state 30
    pointer            go to state 31


state 21

    0 $accept: begin . $end
    2 begin: begin . external_declaration

    $end        shift, and go to state 36
    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    TYPEDEF     shift, and go to state 4
    EXTERN      shift, and go to state 5
    STATIC      shift, and go to state 6
    AUTO        shift, and go to state 7
    REGISTER    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    SIGNED      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    VOID        shift, and go to state 17
    STRUCT      shift, and go to state 18
    UNION       shift, and go to state 19
    '('         shift, and go to state 20

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    declarator                 go to state 29
    direct_declarator          go to state 30
    pointer                    go to state 31
    external_declaration       go to state 37
    function_definition        go to state 33


state 22

    3 begin: Define . begin

    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    DEFINE      shift, and go to state 3
    TYPEDEF     shift, and go to state 4
    EXTERN      shift, and go to state 5
    STATIC      shift, and go to state 6
    AUTO        shift, and go to state 7
    REGISTER    shift, and go to state 8
    CHAR        shift, and go to state 9
    SHORT       shift, and go to state 10
    INT         shift, and go to state 11
    LONG        shift, and go to state 12
    SIGNED      shift, and go to state 13
    UNSIGNED    shift, and go to state 14
    FLOAT       shift, and go to state 15
    DOUBLE      shift, and go to state 16
    VOID        shift, and go to state 17
    STRUCT      shift, and go to state 18
    UNION       shift, and go to state 19
    '('         shift, and go to state 20

    begin                      go to state 38
    Define                     go to state 22
    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    declarator                 go to state 29
    direct_declarator          go to state 30
    pointer                    go to state 31
    external_declaration       go to state 32
    function_definition        go to state 33


state 23

  168 external_declaration: declaration .

    $default  reduce using rule 168 (external_declaration)


state 24

   79 declaration: declaration_specifiers . ';'
   80            | declaration_specifiers . init_declarator_list ';'
  169 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  170                    | declaration_specifiers . declarator compound_statement

    '*'         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 20
    ';'         shift, and go to state 39

    init_declarator_list  go to state 40
    init_declarator       go to state 41
    declarator            go to state 42
    direct_declarator     go to state 30
    pointer               go to state 31


state 25

   81 declaration_specifiers: storage_class_specifier .
   82                       | storage_class_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 4
    EXTERN    shift, and go to state 5
    STATIC    shift, and go to state 6
    AUTO      shift, and go to state 7
    REGISTER  shift, and go to state 8
    CHAR      shift, and go to state 9
    SHORT     shift, and go to state 10
    INT       shift, and go to state 11
    LONG      shift, and go to state 12
    SIGNED    shift, and go to state 13
    UNSIGNED  shift, and go to state 14
    FLOAT     shift, and go to state 15
    DOUBLE    shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 43
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28


state 26

   83 declaration_specifiers: type_specifier .
   84                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 4
    EXTERN    shift, and go to state 5
    STATIC    shift, and go to state 6
    AUTO      shift, and go to state 7
    REGISTER  shift, and go to state 8
    CHAR      shift, and go to state 9
    SHORT     shift, and go to state 10
    INT       shift, and go to state 11
    LONG      shift, and go to state 12
    SIGNED    shift, and go to state 13
    UNSIGNED  shift, and go to state 14
    FLOAT     shift, and go to state 15
    DOUBLE    shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 44
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28


state 27

  103 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 103 (type_specifier)


state 28

  108 struct_or_union_specifier: struct_or_union . IDENTIFIER '{' struct_declaration_list '}' ';'
  109                          | struct_or_union . '{' struct_declaration_list '}' ';'
  110                          | struct_or_union . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 45
    '{'         shift, and go to state 46


state 29

  171 function_definition: declarator . declaration_list compound_statement
  172                    | declarator . compound_statement

    TYPEDEF   shift, and go to state 4
    EXTERN    shift, and go to state 5
    STATIC    shift, and go to state 6
    AUTO      shift, and go to state 7
    REGISTER  shift, and go to state 8
    CHAR      shift, and go to state 9
    SHORT     shift, and go to state 10
    INT       shift, and go to state 11
    LONG      shift, and go to state 12
    SIGNED    shift, and go to state 13
    UNSIGNED  shift, and go to state 14
    FLOAT     shift, and go to state 15
    DOUBLE    shift, and go to state 16
    VOID      shift, and go to state 17
    STRUCT    shift, and go to state 18
    UNION     shift, and go to state 19
    '{'       shift, and go to state 47

    declaration                go to state 48
    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    compound_statement         go to state 50
    declaration_list           go to state 51


state 30

  119 declarator: direct_declarator .
  122 direct_declarator: direct_declarator . '[' constant_expression ']'
  123                  | direct_declarator . '[' ']'
  124                  | direct_declarator . '(' parameter_list ')'
  125                  | direct_declarator . '(' identifier_list ')'
  126                  | direct_declarator . '(' ')'

    '('  shift, and go to state 52
    '['  shift, and go to state 53

    $default  reduce using rule 119 (declarator)


state 31

  118 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 20

    direct_declarator  go to state 54


state 32

    1 begin: external_declaration .

    $default  reduce using rule 1 (begin)


state 33

  167 external_declaration: function_definition .

    $default  reduce using rule 167 (external_declaration)


state 34

  128 pointer: '*' pointer .

    $default  reduce using rule 128 (pointer)


state 35

  121 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 55


state 36

    0 $accept: begin $end .

    $default  accept


state 37

    2 begin: begin external_declaration .

    $default  reduce using rule 2 (begin)


state 38

    2 begin: begin . external_declaration
    3      | Define begin .
